# ic-green-ledger

./: Cargo.toml  README.md  package-lock.json
canisters/: dfx.json  package.json
canisters/src/green_ledger_backend/: Cargo.toml
canisters/src/green_ledger_backend/src/: lib.rs  nft.rs  payout.rs  policy_manager.rs  storage.rs  types.rs  utils.rs  weather.rs
canisters/src/green_ledger_frontend/: package.json
docs/: Economic_study-Maize_Insurance_Malawi.md  PolicyManger_Updates.md  System_design.md  contracts_Architecture.md
front-end/: package-lock.json  package.json
front-end/app/: page.tsx
front-end/app/admin/: page.tsx
front-end/app/admin/analytics/: page.tsx
front-end/app/admin/complaints/: page.tsx
front-end/app/admin/liquidity/: page.tsx
front-end/app/admin/payouts/: page.tsx
front-end/app/admin/policies/: page.tsx
front-end/app/admin/subscriptions/: page.tsx
front-end/app/admin/system/: page.tsx
front-end/app/farmer/: page.tsx
front-end/app/farmer/activity/: page.tsx
front-end/app/farmer/claims/: page.tsx
front-end/app/farmer/policies/: page.tsx
front-end/app/farmer/rainfall/: page.tsx
front-end/components/: interactive-map.tsx
front-end/components/admin/: admin-header.tsx  admin-layout.tsx  admin-sidebar.tsx
src/green_ledger_backend/: Cargo.toml
src/green_ledger_backend/src/: errors.rs  farmer.rs  policy_manager.rs  types.rs
src/green_ledger_frontend/src/: App.jsx
