[package]
name = "green_ledger_backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.17"
ic-cdk-macros = "0.18.5"
ic-stable-structures = "0.5.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.ic-cdk-timers]
version = "0.11"
optional = true

[features]
default = []
timers = ["ic-cdk-timers"]
